# prithvi-ai-backend

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini
backend/app/: config.py  main.py
backend/app/cli/: ingest.py
backend/app/db/: local_bootstrap.py  session.py  types.py
backend/app/middleware/: audit.py  security_headers.py
backend/app/models/: __init__.py  auth.py  base.py  common.py  data.py  datasets.py  regions.py
backend/app/scripts/: run_pipeline.py
backend/app/services/: auth_service.py  cache_service.py  catalog_service.py  jobs_service.py  runtime_state.py
backend/config/: scenario.yml  scenario_evidence.yml
backend/scripts/: seed_dev.py
backend/tests/: test_air_api.py  test_alerts_engine_api.py  test_auth.py  test_datasets_api.py  test_disease_api.py  test_evidence_api.py  test_fairness_and_drift_api.py  test_forecast_scoring.py  test_governance_audit_api.py  test_health.py  test_heat_api.py  test_ingest_flows.py  test_kg_search_api.py  test_model_status_column.py  test_optimizer_api.py  test_pipeline_runner.py  test_pm25_autoregressive.py  test_promotion_invariant.py  test_regions_api.py  test_regions_datasets.py  test_registry_promotion.py  test_retrain_shadow_status.py  test_run_pipeline_cli.py  test_scenario_api.py  test_series_api.py  test_sse_and_job.py  test_surge_api.py  test_training_and_backtest.py
infra/: Dockerfile.api  Dockerfile.postgres  Dockerfile.worker  Dockerfile.worker-geospatial  docker-compose.yml
(+106 files in other folders)
