[tool.poetry]
name = "prithvi-ai-backend"
version = "0.1.0"
description = "PRITHVI-AI backend foundation (FastAPI, RBAC, Celery, SSE)"
authors = ["PRITHVI Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = ">=2.7"
sqlalchemy = ">=2.0"
alembic = "*"
asyncpg = "*"
aiosqlite = "*"
redis = ">=5"
celery = ">=5.3"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
bcrypt = "4.0.1"
python-jose = "*"
structlog = "*"
opentelemetry-instrumentation-fastapi = "*"
sentry-sdk = "*"
minio = "*"
python-dotenv = "*"
email-validator = "*"
geoalchemy2 = "*"
shapely = ">=2.0"
typer = {version = "*", extras = ["all"]}
apscheduler = "*"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
shap = "*"
joblib = "*"
PyYAML = "*"
psycopg2-binary = ">=2.9"
httpx = ">=0.27"
statsforecast = ">=1.7"
xgboost = ">=2.0"
spacy = ">=3.7"
fairlearn = ">=0.10"
evidently = ">=0.4"
fastembed = ">=0.3"
pytrends = ">=4.9"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"
ruff = "*"
black = "*"
isort = "*"
mypy = "*"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
